@@ -1,10 +1,15 @@
+Wed Jan 30 15:41:17 UTC 2008  Mike Martinez  <martinez_m@ociweb.com>
+
+        * docs/DomainRepoConfig.html:
+	  Added table of key/value pairs for sections.
+
 Wed Jan 30 00:19:21 UTC 2008  Mike Martinez  <martinez_m@ociweb.com>
 
         * DDS_release_notes.txt:
         * docs/DomainRepoConfig.html:
         * docs/design/multirepo.txt:
-	  Added some documentation describing the changes and how they
-	  can be configured.
+          Added some documentation describing the changes and how they
+          can be configured.
 
 Tue Jan 29 21:53:13 UTC 2008  Mike Martinez  <martinez_m@ociweb.com>
 
